fix: adjust hero class overflow bug

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -91,6 +91,7 @@ body {
 
 	&__description {
 		margin: 1.2rem auto 0;
+		opacity: .8;
 	}
 
 	&__button {
@@ -98,7 +99,7 @@ body {
 		background-color: $color-neutral;
 		border: none;
 		border-radius: 10rem;
-		box-shadow: 0 .3rem .5rem hsla(0, 0, 0, .25);
+		box-shadow: 0 .3rem .5rem rgba(0, 0, 0, .25);
 		cursor: pointer;
 		margin-top: 2.5rem;
 		padding: 1.2rem 7.6rem 1rem;
@@ -143,10 +144,19 @@ body {
 }
 
 //===== MEDIA QUERIES ========================================================//
+@media screen and (min-width: 768px) {
+
+	body {
+		background-size: cover;
+	}
+
+}
+
 @media screen and (min-width: 1024px) {
 
 	body {
 		background-image: url('../assets/bg-desktop.svg');
+		background-position-y: center;
 		background-size: cover;
 	}
 
@@ -163,21 +173,17 @@ body {
 	}
 
 	.hero {
-		align-items: center;
-		flex-direction: row;
-		gap: 5rem;
-		justify-content: center;
+		display: grid;
+		grid-template-columns: 1fr 1fr;
 
 		&__image {
-			display: inline-block;
-			flex: 1;
-			flex: 1.35;
+			width: min(50vw, 70rem);
 		}
 
 		&__info {
+			align-self: center;
+			margin: 0 0 0 5.6rem;
 			text-align: left;
-			margin: 0;
-			flex: 1;
 		}
 
 		&__title {
@@ -217,10 +223,9 @@ body {
 @media screen and (min-width: 1240px) {
 
 	.hero {
-		align-items: flex-start;
-
 		&__info {
-			margin: 5rem 0 0;
+			align-self: flex-start;
+			margin-top: 5rem;
 		}
 
 		&__title {
@@ -235,15 +240,6 @@ body {
 		&__button {
 			font-size: 1.8rem;
 		}
-	}
-
-}
-
-@media screen and (min-width: 1320px) {
-
-	body {
-		background-position-x: left;
-		background-size: contain;
 	}
 
 }
